--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,8 @@ add_library(harmest harmest.cpp ${HEADER_LIST})
 # We need this directory, and users of our library will need it too
 target_include_directories(harmest PUBLIC ../include)
 
-# This depends on (header only) boost
-# target_link_libraries(modern_library PRIVATE Boost::boost)
+# This depends on FFTW3
 target_link_libraries(harmest PRIVATE ${FFTW_LIBRARIES})
-
 
 # All users of this library will need at least C++11
 target_compile_features(harmest PUBLIC cxx_std_11)
