--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,4 +5,4 @@
 add_executable(ccid ccid.cpp)
 
 target_compile_features(ccid PUBLIC cxx_std_11)
-target_link_libraries(ccid PRIVATE harmest pthread curses)
+target_link_libraries(ccid PRIVATE harmest snditf pthread curses)
