--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,8 @@ add_library(harmest harmest.cpp ${HARMEST_HEADER_LIST})
 add_library(snditf snditf.cpp ${SNDITF_HEADER_LIST})
 
 # We need this directory, and users of our library will need it too
-target_include_directories(harmest PUBLIC ../include)
-target_include_directories(snditf PUBLIC ../include)
+target_include_directories(harmest PUBLIC ../include ${FFTW_INCLUDE_DIRS})
+target_include_directories(snditf PUBLIC ../include ${VOLK_INCLUDE_DIRS} ${ALSA_INCLUDE_DIRS})
 
 # Library dependencies
 target_link_libraries(harmest PRIVATE ${FFTW_LIBRARIES})
