--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,14 @@ option(BUILD_SHARED_LIBS "Build shared or static libs." ON)
 find_package(ALSA REQUIRED)
 if (ALSA_FOUND)
 	message("   Found ALSA sound library")
+	message("    ${ALSA_LIBRARIES}")
 	message("    ${ALSA_INCLUDE_DIRS}")
 endif()
 
 find_package(FFTW REQUIRED FLOAT_LIB)
 if (FFTW_FOUND)
 	message("   Found FFTW3 single precision library")
+	message("    ${FFTW_LIBRARIES}")
 	message("    ${FFTW_INCLUDE_DIRS}")
 endif()
 
