--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,7 +9,7 @@ target_compile_features(ccid PUBLIC cxx_std_14)
 
 add_executable(jackcopy jackcopy.c)
 target_include_directories(jackcopy PUBLIC ${VOLK_INCLUDE_DIRS} ${JACK_INCLUDE_DIRS})
-target_link_libraries(jackcopy PRIVATE ${JACK_LIBRARIES} ${VOLK_LIBRARIES})
+target_link_libraries(jackcopy PRIVATE m ${JACK_LIBRARIES} ${VOLK_LIBRARIES})
 target_compile_features(jackcopy PUBLIC c_std_11)
 
 add_executable(latency latency.c)
